<resources>
    <string name="app_name">Movies Up</string>
    <string name="tab_text_1">Movies</string>
    <string name="tab_text_2">Tv Show</string>
    <string name="tab_text_3">Movies Favorite</string>
    <string name="tab_text_4">Tv Favorite</string>

    <string name="movie_title">Movie Title</string>
    <string name="category">Category</string>
    <string name="duration">Duration</string>
    <string name="overview">OverView</string>

    <string name="detail">Detail</string>
    <string name="tambah_favorit">Tambah Favorit</string>
    <string name="empty_fav">Tidak Ada Daftar Favorit</string>
</resources>
